@@ -67,6 +67,7 @@
 - Fix: [#17966] Reversed steel trains do not properly import from S4.
 - Fix: [#18008] Steeplechase S-bends has multiple gaps visible in the tracks.
 - Fix: [#18009] Visual glitch with litter at edge of sloped path.
+- Fix: [#18025] Fix land ownership in Six Holland, Six Flags Magic Mountain, North America - Grand Canyon and Asia - Great Wall of China Tourism Enhancement scenarios. 
 - Fix: [#18026] Park rating drops to 0 with more than 32k guests, total ride excitement or intensity.
 - Fix: [#18051] Visual glitch with Mine Ride's large unbanked turn.
 - Fix: [#18032] All non-interactive widgets (labels, groupboxes) produce sound when clicked.
